--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7oy-SKMpdyYKhzX8vXKbL_XcgfwiDBzc">
+    </script>
 
   <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
