--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,18 +11,7 @@
             <h1><%= image_tag("logo2.png", alt: "Spinwashlounge", class: "logo-navbar img-responsive") %></h1>
           </a>                    
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">                 
-            <li class="scroll active"><a href="#home">Home</a></li>
-            <li class="scroll"><a href="#services">Service</a></li> 
-            <li class="scroll"><a href="#features">Why Us?</a></li> 
-            <li class="scroll"><a href="#about-us">About Us</a></li>                     
-            <li class="scroll"><a href="#portfolio">Portfolio</a></li>
-            <li class="scroll"><a href="#team">Team</a></li>
-            <li class="scroll"><a href="#blog">Blog</a></li>
-            <li class="scroll"><a href="#contact">Contact</a></li>       
-          </ul>
-        </div>
+        <%= render 'nav' %>
       </div>
     </div><!--/#main-nav-->
   </header><!--/#home-->
@@ -740,3 +729,4 @@
       </div>
     </div>        
   </section><!--/#contact-->
+  <%= render 'contact' %>
