--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,17 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7oy-SKMpdyYKhzX8vXKbL_XcgfwiDBzc">
-    </script>
-
+     
   <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
   <![endif]-->
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="assets/favicon.ico">
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7oy-SKMpdyYKhzX8vXKbL_XcgfwiDBzc&callback=initMap"
+        async defer></script>
 </head>
 <body>
   <!--.preloader-->
